--- a/mirrorfashion/sobre.html
+++ b/mirrorfashion/sobre.html
@@ -3,12 +3,27 @@
 <head>
 	<title>Sobre a Mirror Fashion</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/sobre.css" >
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/sobre.css" >	
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-	<img src="img/logo.png">
+	<header class="container">
+		
+		<h1><img src="img/logo.png" alt="Mirror Fashion"></h1>
+		<div class="sacola">Nenhum item na sacola de compras</div>
+		<nav class="menu-opcoes">
+			<ul>
+				<li><a href="#">Sua conta</a></li>
+				<li><a href="#">Lista de Desejos</a></li>
+				<li><a href="#">Cartão de fidelidade</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
+				<li><a href="#">Ajuda</a></li>
+			</ul>
+		</nav>
+	</header>
 
-	<h1>A Mirror Fashion</h1>
+	<h1 class="cab-topo">A Mirror Fashion</h1>
 
 	<p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
 	Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
