--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -23,8 +23,8 @@
 	<div class="container destaque">
 		<section class="busca">
 			<h2>Busca</h2>
-			<form>
-				<input type="search">
+			<form action="http://google.com/search" id="form-busca">
+				<input type="search" name="q" id="q">
 				<input type="image" src="img/busca.png">
 			</form>
 		</section>
@@ -43,6 +43,7 @@
 			</nav>
 		</section>
 		<img src="img/destaque-home.png" alt="Promoção: Big City Night">
+		<a href="#" class="pause"></a>
 	</div>
 	<div class="container paineis">
 		<section class="painel novidades">
@@ -163,6 +164,7 @@
 			</ul>
 		</div>
 	</footer>
+	<script src="js/home.js"></script>
 </body>
 </html>
 
