--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -32,7 +32,15 @@
 			<h2>Departamentos</h2>
 			<nav>
 				<ul>
-					<li><a href="#">Blusas e camisas</a></li>
+					<li>
+						<a href="#">Blusas e camisas</a>
+						<ul>
+							<li><a href="#">Manga curta</a></li>
+							<li><a href="#">Manga comprida</a></li>
+							<li><a href="#">Camisa social</a></li>
+							<li><a href="#">Camisa casual</a></li>
+						</ul>
+					</li>
 					<li><a href="#">Calças</a></li>
 					<li><a href="#">Saias</a></li>
 					<li><a href="#">Vestidos</a></li>
